--- a/_posts/2025-02-09-revshell.md
+++ b/_posts/2025-02-09-revshell.md
@@ -2,8 +2,8 @@
 layout: post
 title: "Reverse Shell Cheat Sheet"
 date: 2025-02-09 11:11:11 +0000
-categories: []
-tags: []
+categories: [Cheatsheet]
+tags: [cheatsheet]
 ---
 
 hello
